--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="weather-container">
         <div class="city-search">
             <input type="text" id="cityInput" placeholder="Entrez un nom de ville">
-            <button>OK</button>
+            <button id="update">OK</button>
         </div>
-        <h1 id="city">Chargement...</h1>
+        <h1 id="city"></h1>
         <div id="gps"></div>
         <div id="temperature">-°C</div>
         <div id="details">Mise à jour en cours...</div>
